<resources>
    <string name="app_name">All about car parts</string>
    <string name="name_hint">Insert your name </string>
    <string name="single_choice_question">What part is presented in the following image ?</string>
    <string name="single_choice_question1_answer1">Crankshaft</string>
    <string name="single_choice_question1_answer2">Camshaft</string>
    <string name="single_choice_question1_answer3">Piston Head</string>
    <string name="single_choice_question1_answer4">Bearing</string>
    <string name="single_choice_question2_answer1">Connecting Rod</string>
    <string name="single_choice_question2_answer2">Pulley</string>
    <string name="single_choice_question2_answer3">Brake</string>
    <string name="single_choice_question2_answer4">Rocker Arm</string>
    <string name="single_choice_question3_answer1">Bearing</string>
    <string name="single_choice_question3_answer2">Engine</string>
    <string name="single_choice_question3_answer3">Cylinder Block</string>
    <string name="single_choice_question3_answer4">Wheel</string>
    <string name="single_choice_question4_answer1">Tire</string>
    <string name="single_choice_question4_answer2">Shifter</string>
    <string name="single_choice_question4_answer3">Cylinder Head</string>
    <string name="single_choice_question4_answer4">Piston</string>
    <string name="single_choice_question5_answer1">Gasket</string>
    <string name="single_choice_question5_answer2">Support</string>
    <string name="single_choice_question5_answer3">Rings</string>
    <string name="single_choice_question5_answer4">Bearings</string>
    <string name="multiple_choice_question_1">Which of the following are parts of the injection system ?</string>
    <string name="multiple_choice_question1_answer1">Pressure Regulator</string>
    <string name="multiple_choice_question1_answer2">Injector</string>
    <string name="multiple_choice_question1_answer3">Wrench</string>
    <string name="multiple_choice_question1_answer4">Coolant pump</string>
    <string name="multiple_choice_question_2">Which of the following are parts of the ignition system ?</string>
    <string name="multiple_choice_question2_answer1">Spark Plugs</string>
    <string name="multiple_choice_question2_answer2">Battery</string>
    <string name="multiple_choice_question2_answer3">Ignition Coil</string>
    <string name="multiple_choice_question2_answer4">Windshield</string>
    <string name="multiple_choice_question_3">Which of the following are parts of the exhaust system ?</string>
    <string name="multiple_choice_question3_answer1">Exhaust Pipe</string>
    <string name="multiple_choice_question3_answer2">Turbocharger</string>
    <string name="multiple_choice_question3_answer3">Wrench</string>
    <string name="multiple_choice_question3_answer4">Catalytic Converter</string>
    <string name="multiple_choice_question_4">Which of the following are parts of the suspension ?</string>
    <string name="multiple_choice_question4_answer1">Control Arms</string>
    <string name="multiple_choice_question4_answer2">Springs</string>
    <string name="multiple_choice_question4_answer3">Dampers</string>
    <string name="multiple_choice_question4_answer4">Anti-roll Bar</string>
    <string name="multiple_choice_question_5">Which of the following are parts of the cooling system ?</string>
    <string name="multiple_choice_question5_answer1">Radiator</string>
    <string name="multiple_choice_question5_answer2">Thermostat</string>
    <string name="multiple_choice_question5_answer3">Spare Tire</string>
    <string name="multiple_choice_question5_answer4">Water Pump</string>
    <string name="writeIt_question">What part is presented in the following image ?</string>
    <string name="writeIt_answer1">Valve</string>
    <string name="writeIt_answer2">Crankshaft</string>
    <string name="writeIt_answer3">Camshaft</string>
    <string name="writeIt_answer4">Injector</string>
    <string name="writeIt_answer5">Drive belt</string>
    <string name="button_start">Start</string>
    <string name="button_multiple_choice">Multiple Choice</string>
    <string name="button_one_option">Single Choice</string>
    <string name="button_written_answer">Write Your Answer</string>
    <string name="button_back_main">Go back to the main screen</string>
    <string name="button_back_menu">Main menu</string>
    <string name="type_answer">Type your answer</string>
    <string name="congratulations">Congratulations</string>
    <string name="final_score">Final score</string>
    <string name="welcome">Welcome to car parts quiz!</string>
    <string name="hello">Hello \ </string>
    <string name="choose">Select your game mode</string>
    <string name="button_next_question">Next question</string>
    <string name="content_description_main_menu">Main menu image</string>
    <string name="try_again">Try again!</string>
    <string name="you_scored">You scored\n </string>
    <string name="points">\n points</string>



</resources>