<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_view_style"
    tools:context="com.example.android.mechanicsquiz.WriteYourAnswer" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        style="@style/linear_layouts_style"
        tools:context="com.example.android.mechanicsquiz.WriteYourAnswer" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_for_write_your_answer_activity"
                style="@style/typical_text_style"
                android:text="@string/writeIt_question" />


        </LinearLayout>

        <ImageView
            android:id="@+id/write_your_answer_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_main_menu"
            android:src="@drawable/valve" />

        <EditText
            android:id="@+id/write_your_answer"
            style="@style/write_your_answer_style"
            android:layout_gravity="center"
            android:hint="@string/type_answer" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_next_question"
                style="@style/normal_buttons_style"
                android:text="@string/button_next_question" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>
